--- a/styles/ManualEntry.module.css
+++ b/styles/ManualEntry.module.css
@@ -45,6 +45,12 @@
     border-top: 1px solid #666;
     margin-bottom: 2rem;
   }
+
+  .error {
+    color: red;
+    font-size: 1rem;
+    margin-top: 10px;
+  }  
   
   .colorDisplayContainer {
     text-align: center;
