--- a/styles/CameraScan.module.css
+++ b/styles/CameraScan.module.css
@@ -1,3 +1,5 @@
+
+
 .container {
   display: flex;
   flex-direction: column;
@@ -7,7 +9,12 @@
   background-color: #ffffff;
   color: #000000;
   padding: 20px;
+  user-select: none; /* Disable selection */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE/Edge */
 }
+
 
 .backButton {
   align-self: flex-start;
